adding some endpoints